vemo-app/main/default/objects/StewardshipACHBatch__c/StewardshipACHBatch__c.object-meta.xml
<CustomObject>
    <label>Stewardship ACH Batch</label>
    <nameField>
        <displayFormat>STACHBAT-{0000000000}</displayFormat>
        <label>Stewardshp ACH Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stewardship ACH Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>