vemo-app/main/default/objects/StewardshipACHBatch__c/fields/ApprovalPassword__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPassword__c</fullName>
    <label>Approval Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>