vemo-app/main/default/objects/StewardshipACHBatch__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <label>Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Disbursements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>