vemo-app/main/default/objects/StewardshipACHBatch__c/fields/BatchSelectResponse__c.field-meta.xml
<CustomField>
    <fullName>BatchSelectResponse__c</fullName>
    <label>Batch Select Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>