vemo-app/main/default/objects/StewardshipACHBatch__c/fields/LastSelectedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSelectedDateTime__c</fullName>
    <label>Last Selected DateTime</label>
    <type>DateTime</type>
</CustomField>