vemo-app/main/default/objects/StewardshipACHBatch__c/fields/OpenBatchDetails__c.field-meta.xml
<CustomField>
    <fullName>OpenBatchDetails__c</fullName>
    <label>Open Batch Details</label>
    <summaryFilterItems>
        <field>StewardshipACHBatchDetail__c.TransactionStatus__c</field>
        <operation>notEqual</operation>
        <value>C, B</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>StewardshipACHBatchDetail__c.StewardshipStatus__c</field>
        <operation>notContain</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>StewardshipACHBatchDetail__c.StewardshipACHBatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>