vemo-app/main/default/objects/StewardshipACHBatch__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>