vemo-app/main/default/objects/StewardshipACHBatch__c/fields/StewardshipProcess__c.field-meta.xml
<CustomField>
    <fullName>StewardshipProcess__c</fullName>
    <label>Stewardship Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaymentBatchOpen</fullName>
            </value>
            <value>
                <fullName>PaymentBatchSelect</fullName>
            </value>
            <value>
                <fullName>PaymentBatchApprove</fullName>
            </value>
            <value>
                <fullName>PaymentBatchCancel</fullName>
            </value>
            <value>
                <fullName>CreditBatchOpen</fullName>
            </value>
            <value>
                <fullName>PaymentBatch Created</fullName>
            </value>
            <value>
                <fullName>CreditBatch Created</fullName>
            </value>
            <value>
                <fullName>Batch Selected</fullName>
            </value>
            <value>
                <fullName>Batch Approved</fullName>
            </value>
            <value>
                <fullName>Batch Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>