vemo-app/main/default/objects/StewardshipACHBatch__c/fields/StewardshipStatus__c.field-meta.xml
<CustomField>
    <fullName>StewardshipStatus__c</fullName>
    <label>Stewardship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaymentBatch Created</fullName>
            </value>
            <value>
                <fullName>CreditBatch Created</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>