vemo-app/main/default/objects/StewardshipACHBatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BatchType__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>Status__c</columns>
    <columns>BatchGUID__c</columns>
    <columns>StewardshipProcess__c</columns>
    <columns>StewardshipStatus__c</columns>
    <columns>OpenBatchDetails__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>