vemo-app/main/default/objects/StewardshipACHBatch__c/listViews/Approved_Open.listView-meta.xml
<ListView>
    <fullName>Approved_Open</fullName>
    <columns>NAME</columns>
    <columns>BatchType__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>Status__c</columns>
    <columns>BatchGUID__c</columns>
    <columns>StewardshipProcess__c</columns>
    <columns>StewardshipStatus__c</columns>
    <columns>OpenBatchDetails__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OpenBatchDetails__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Open</label>
</ListView>