vemo-app/main/default/objects/StewardshipACHBatch__c/listViews/Cancelled_Batches.listView-meta.xml
<ListView>
    <fullName>Cancelled_Batches</fullName>
    <columns>NAME</columns>
    <columns>BatchType__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>Status__c</columns>
    <columns>BatchGUID__c</columns>
    <columns>StewardshipProcess__c</columns>
    <columns>StewardshipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Batches</label>
</ListView>